k8s/node-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo
  labels:
    app: node-demo
spec:
  selector:
    app: node-demo
  ports:
  - name: http
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo
  template:
    metadata:
      labels:
        app: node-demo
        version: v1
    spec:
      containers:
      - name: node-demo
        image: guanwei/node-demo
        ports:
        - containerPort: 8080
