k8s/node-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-demo
spec:
  hosts:
  - "*"
  gateways:
  - node-demo-gateway
  http:
  - route:
    - destination:
        host: node-demo
